# computacion-grafica-final

./: CMakeLists.txt  main.cpp  shader.fs  shader.vs
Clases/: Camera.h  ColorUtil.h  ColoresEnum.h  CuboRubik.h  Operations.h  Point.h  Rubik.h  Shader.h
